--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
     <script type="importmap">
         {
             "imports": {
-                "three": "./node_modules/three/build/three.module.js"
+                "three": "/lib/three.module.js"
             }
         }
     </script>
-    <script type="module" src="./js/main.js"></script>
+    <script src="js/webmidi.iife.js"></script>
+    <script type="module" src="js/main.js"></script>
 </body>
 </html>
