--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <script type="importmap">
         {
             "imports": {
-                "three": "/lib/three.module.js"
+                "three": "/js/three.module.js"
             }
         }
     </script>
