Debugging three.js not found

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <script type="importmap">
         {
             "imports": {
-                "three": "/js/three.module.js"
+                "three": "https://unpkg.com/three@0.160.0/build/three.module.js"
             }
         }
     </script>
