Better automap logic

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
             <option value="">Select MIDI Input</option>
         </select>
         <div class="control-section">
-            <button id="toggleAutomap">Enable CC Automap</button>
-            <span id="automapStatus">Waiting for CC...</span>
+            <button id="toggleAutomap">Automap</button>
+            <span id="automapStatus"></span>
         </div>
         <div id="ccMappings">
             <div>Current Mappings:</div>
